# openeduvoice

./: .gitignore  NvidiaCuda_Installation.md  README.md  install_OpenEduVoice.bat  pyproject.toml  requirements-ml.txt  requirements-tts.txt  requirements.lock.full.txt  requirements.lock.txt  requirements.txt  run_OpenEduVoice.bat  start_OpenEduVoice.bat  venv_paths.json
scripts/: install_OpenEduVoice.ps1  run_OpenEduVoice.ps1  setup_OpenEduVoice.ps1  start_OpenEduVoice.ps1
src/OpenEduVoice/: __main__.py  app.py
src/OpenEduVoice/app/: main_window.py
src/OpenEduVoice/core/audio/: audio_converter.py  transcriber.py  tts_generator.py
src/OpenEduVoice/core/translation/: nllb_model.py  translator_interface.py
src/OpenEduVoice/gui/: main_window.py
src/OpenEduVoice/utils/: cleanup.py  ffmpeg_utils.py  logging_utils.py
src/pptx_linguistic_tool/: __main__.py
src/pptx_linguistic_tool/app/: main_window.py
