[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenEduVoice"
version = "0.1.0"
description = "Offline PowerPoint audio + slide text transcription/translation/TTS tool"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]

ml = [
    "torch",
    "torchaudio",
    "transformers",
    "sentencepiece",
    "safetensors",
    "tokenizers",
    "regex"
]

tts = [
    "coqui-tts"
]

cuda12 = [
  "nvidia-cuda-runtime-cu12",
  "nvidia-cublas-cu12",
  "nvidia-cudnn-cu12"
]

full-gpu = [
  "OpenEduVoice[ml,tts,cuda12]"
]